objects/August_Demo__c.object
<CustomObject>
    <fields>
        <fullName>Artisan_text__c</fullName>
        <label>Artisan text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aug_Demo_Text_field__c</fullName>
        <label>Aug Demo Text field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Demo__c</fullName>
        <label>Type of Demo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>August Demo</label>
    <nameField>
        <label>August Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>August Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>